# gmm

./: Cargo.toml  README.md
src/: lib.rs  prelude.rs  utils.rs
src/data/: bool2.rs  bool3.rs  bool4.rs  float2.rs  float3.rs  float3x3.rs  float4.rs  float4x4.rs  int2.rs  int3.rs  int4.rs  mod.rs  uint2.rs  uint3.rs  uint4.rs
src/data/features/: bytemuck.rs  mint.rs  mod.rs
src/features/: impl_bytemuck.rs  impl_mint.rs  mod.rs
src/macros/: impl_element2.rs  impl_element2_op.rs  impl_element3.rs  impl_element3_op.rs  impl_element4.rs  impl_element4_op.rs  mod.rs
src/tests/: base_op.rs  matrix_base_op.rs  matrix_op.rs  mod.rs  quaternion_op.rs  vector_base_op.rs  vector_cmp.rs  vector_op.rs
src/vec/: mod.rs  neon.rs  scalar.rs  sse2.rs  tests.rs
src/vec/neon/: matrix.rs  mod.rs  quaternion.rs  vector.rs  vector_int.rs
src/vec/scalar/: matrix.rs  mod.rs  quaternion.rs  vector.rs  vector_int.rs
src/vec/sse2/: matrix.rs  mod.rs  quaternion.rs  vector.rs  vector_int.rs
