[package]
name = "gmm"
version = "0.2.2"
edition = "2021"
rust-version = "1.76"
authors = ["HK416 <powerspirit127@gmail.com>"]
description = "Math library for video games"
repository = "https://github.com/HK416/gmm"
readme = "README.md"
license = "MIT"
keywords = ["gamedev", "math", "vector", "matrix", "simd"]



[dev-dependencies]
rand = "0.8.*"
glam = "0.28.*" # Used to evaluate whether it is functioning properly.



[dependencies]
bytemuck = { version = "1.16", optional = true, default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true, default-features = false }
mint = { version = "0.5", optional = true, default-features = false }



[features]
default = []

# Allow panic calls within a function.
use-assertion = []

# Disable `SIMD` instructions.
scalar-math = [ "glam/scalar-math" ]
